# zephyr_hc32_hal

./: CMakeLists.txt  README.md
hc32_ddl/: CMakeLists.txt
hc32_ddl/hc32f460/: CMakeLists.txt
hc32_ddl/hc32f460/drivers/inc/: hc32_ll_adc.h  hc32_ll_spi.h  hc32_ll_usart.h  hc32_ll_usb.h
hc32_ddl/hc32f460/drivers/src/: hc32_ll_adc.c  hc32_ll_dbgc.c  hc32_ll_gpio.c  hc32_ll_interrupts.c  hc32_ll_spi.c  hc32_ll_tmra.c  hc32_ll_usart.c  hc32_ll_usb.c
hc32_ddl/hc32f460/soc/: hc32f460.h  hc32f4xx_conf.h  platform_init.S  reset_hook.S  usb_app_conf.h
hc32_ddl/hc32f4a0/: CMakeLists.txt  LICENSE
hc32_ddl/hc32f4a0/drivers/inc/: hc32_ll_adc.h  hc32_ll_usart.h
hc32_ddl/hc32f4a0/drivers/src/: hc32_ll_adc.c  hc32_ll_spi.c  hc32_ll_usart.c
hc32_ddl/hc32f4a0/soc/: hc32f4a0.h  hc32f4xx_conf.h  platform_init.S  reset_hook.S  usb_bsp.h
zephyr/: module.yml
